# Analise-Preditiva-do-Volume-de-Chuvas-na-regiao-de-Marab-

./: .gitignore  Base.xlsx  Base_Atlantico_Norte.xlsx  Base_Atlantico_Sul.xlsx  Base_Nino.xlsx  Base_Pacifico_Sul.xlsx  CORR_ATLN.xlsx  CORR_ATLS.xlsx  CORR_PCS.xlsx  Data_fit.xlsx  EDA.ipynb  EDA2.ipynb  Modeling.ipynb  PreProcessing.ipynb  README.md  Untitled.ipynb  Variaveis_selecionadas.xlsx  base_de_dados_abragencia_3_meses.csv  config.py  correlacoes.xlsx  data_model.xlsx  new_eda.ipynb  prm1.xlsx  pyproject.toml
.ipynb_checkpoints/: EDA-checkpoint.ipynb  PreProcessing-checkpoint.ipynb  TransformData-checkpoint.ipynb  Untitled-checkpoint.ipynb  config-checkpoint.py  new_eda-checkpoint.ipynb  prm1-checkpoint.csv
Data/: .~lock.PRP-MENSAL.xlsx#  ATLA-N - Copy.xlsx  ATLA-N.xlsx  ATLA-S - Copy.xlsx  ATLA-S.xlsx  COORDENADAS - Copy.xlsx  COORDENADAS.xlsx  Data.xlsx  NIÑO - Copy.xlsx  NIÑO.xlsx  PAC-S - Copy.xlsx  PAC-S.xlsx  PANOM-MENSAL-CATEGORIZADA.xlsx  PANOM-MENSAL.xlsx  PRP-MENSAL.xlsx
Legacy/: Base_Atlantico_Norte.xlsx  Base_Atlantico_Sul.xlsx  Base_Nino.xlsx  Base_Pacifico_Sul.xlsx  CORR_NINO.xlsx  EDA.ipynb  EDA2.ipynb  Modeling.ipynb  TransformData.ipynb  correlacoes.xlsx  data_fit.xlsx  model_data_submission(dropna).xlsx  model_data_submission.xlsx  nino_3.xlsx  nino_4.xlsx  submission_data(dropna).xlsx  submission_data.xlsx  submit_data.xlsx  teste.xlsx
app/: main.py
base/: __init__.py  atlantico_norte.py  atlantico_sul.py  coordenadas.py  nino.py  pacifico_sul.py  precipitacao.py
config/: __init__.py
content/: base_de_dados_abragencia_3_meses.csv  (+5 more)
(+4429 files in other folders)
