[tool.poetry]
name = "modelo-preditor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
numpy = "^1.19.3"
matplotlib = "^3.4.2"
plotly = "^5.1.0"
jupyterlab = "^3.1.1"
openpyxl = "^3.0.7"
sklearn = "^0.0"
tensorflow = "^2.4.0"
autokeras = "^1.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
